[workspace]
resolver = "2"
members = [
    "gravity_sim",
    "black_hole",
    "atoms",
    "solar_voyage",
    "common",
    "quantum_sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Physics Simulation Project"]

[workspace.dependencies]
# Graphics and windowing
wgpu = "0.20"
winit = "0.29"

# Math libraries
glam = { version = "0.25", features = ["bytemuck"] }
nalgebra = "0.32"

# Utilities
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
rand = "0.8"

# Internal crates
common = { path = "common" }
