[package]
name = "gravity_sim"
version.workspace = true
edition.workspace = true
description = "N-body gravitational simulation with real-time visualization"

[[bin]]
name = "gravity_sim"
path = "src/main.rs"

[[bin]]
name = "gravity_sim_3d"
path = "src/main_3d.rs"

[dependencies]
common.workspace = true
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
